@@ -4,8 +4,10 @@ Changelog
 Version 1.90
 	Fixed bug: images in .gif and .ico format could not be displayed.
 	The application icon can be changed
-	Added extra diff highlighting
+	Added extra diff highlighting for single line changes
 	Added asynchronous loading of files for diffs and general viewing to improve responsiveness
+	Added "Show relative date" option to context menu of revision grid
+	Copy from diff viewer copies code without '+', '-' or ' ' markings
 
 Version 1.89
 	Fixed bug: Changes of an unstaged file are not shown when the file path contains spaces
